modules/gdscript/tests/scripts/runtime/errors/use_return_value_of_void_native_method_call.gd
func test():
	var obj
	obj = RefCounted.new()
	print(obj.notify_property_list_changed())
